# pi-mono-py

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  WORKSPACE.md  feature_list.json  init.sh  pyproject.toml  pyrightconfig.json  test_basic.py  uv-run.sh
examples/: 00_quick_start.py  01_simple_agent.py  02_agent_with_tools.py  03_agent_events.py  04_steering_followup.py  05_streaming_response.py  06_provider_config.py  PROVIDER_CONFIG.md  README.md  providers_config.py
scripts/: publish.sh
