[project]
name = "pi-mono"
version = "0.1.0"
description = "Python port of pi-mono: unified multi-provider LLM API and agent runtime"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pi-ai = { workspace = true }
pi-agent = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/pi_ai/tests", "packages/pi_agent/tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
