[project]
name = "pi-mono"
version = "0.1.0"
description = "Python port of pi-mono: unified multi-provider LLM API and agent runtime"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pi-ai = { workspace = true }
pi-agent = { workspace = true }
pi-tui = { workspace = true }
pi-coding = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/pi_ai/tests", "packages/pi_agent/tests", "packages/pi_tui/tests"]
addopts = "--cov=pi_ai --cov=pi_agent --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["packages/pi_ai/src/pi_ai", "packages/pi_agent/src/pi_agent"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
exclude = [
    "**/tests/",
    "**/__pycache__/",
    "**/.venv/",
]
# Ignore optional dependency imports
reportMissingImports = true
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "basedpyright>=1.38.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.15.1",
]
